--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     
     <h1>Subtracting in TypeScript</h1>
-    Subtraction result is: 
+    Subtraction result is: <span id="sub_result"></span>
     <!-- LAB: Añadir un elemento span con id="sub_result" -->
     
 
